dashboard done, card icons added

--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,10 @@ header{
     box-shadow: 2px 2px 6px -3px black;
     background-color: white;
 }
+.project-icons{
+    justify-content: flex-end;
+    gap: 10px;
+}
 main{
     display:grid;
     grid-template-columns: 2fr 1fr;
