--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ h4{
     display: grid;
     grid-template-columns: 1fr 6fr;
     grid-template-rows: 100px 50px 50px 50px 50px 50px 50px;
-    /* height: 100vh; */
+    height: 100vh;
     width: 20vw;
     min-width: 200px;
     background-color: aqua;
